# GS1Combinators

./: .GS1.hs.swp  .gitignore  .travis.yml  GS1.hs  GS1.hs~  GS1Combinators.cabal  LICENSE  README.md  generate_docs.sh  run_tests.sh  stack.yaml  test_stats.sh
app/: Main.hs
doc/: CBV-Standard-1-2-r-2016-09-29.pdf.REMOVED.git-id  EPCIS-Standard-1.2-r-2016-09-29.pdf.REMOVED.git-id  EPCIS_Guideline.pdf.REMOVED.git-id  GS1_EPC_TDS_i1_10.pdf.REMOVED.git-id  GS1_EPC_TDS_i1_11.pdf.REMOVED.git-id  GS1_General_Specifications.pdf.REMOVED.git-id  GS1_System_Architecture.pdf.REMOVED.git-id  GS1_System_Landscape.pdf.REMOVED.git-id  GS1au-technical-australian-freight-labelling-guideline-v1-2.pdf.REMOVED.git-id  GS1au-technical-australian-freight-labelling-guideline-v2.pdf.REMOVED.git-id  TDS_1_9_Standard.pdf.REMOVED.git-id  gs1_id_keys_reference_card.pdf.pdf.REMOVED.git-id  tds_1_6-RatifiedStd-20110922.pdf.REMOVED.git-id
docs/: Data-GS1-DWhat.html  Data-GS1-DWhen.html  Data-GS1-DWhere.html  Data-GS1-DWhy.html  Data-GS1-EPC.html  Data-GS1-Event.html  Data-GS1-EventId.html  Data-GS1-Parser-Parser.html  Data-GS1-Utils.html  GS1Combinators.txt  RunApp-Main.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-X.html  doc-index.html  index.html
docs/src/: Data.GS1.DWhat.html  Data.GS1.DWhen.html  Data.GS1.DWhere.html  Data.GS1.DWhy.html  Data.GS1.EPC.html  Data.GS1.ErrorDeclaration.html  Data.GS1.Event.html  Data.GS1.EventId.html  Data.GS1.Parser.Parser.html  Data.GS1.Utils.html  Data.GS1.html  RunApp.Main.html
src/: Main.hs  Makefile  clean.sh  testParser.hs
src/Data/: Format.hs  GS1.hs
src/Data/GS1/: BizStep.hs  BizTransaction.hs  DWhat.hs  DWhen.hs  DWhere.hs  DWhy.hs  Disposition.hs  EPC.hs  EPCISEvent.hs  EPCISTime.hs  ErrorDeclaration.hs  Event.hs  EventB.hs  EventDraft.hs  EventID.hs  EventId.hs  EventType.hs  GS1Exception.hs  Location.hs  Namespace.hs  Object.hs  SourceDest.hs  URI.hs  URN.hs  Utils.hs  Why.hs
src/Data/GS1/Parser/: AggregationEvent.xml  EPCGlobal_BaseSchema.xsd  EPCGlobal_CoreEvent.xsd  ObjectEvent.xml  Parser.hs  TransformationEvent.xml
src/Data/Time/Format/: ISO8601.hs
src/RunApp/: Main.hs
src/XML/: Parser.hs
test/: Spec.hs
test/Tests/: DWhat.hs  DWhen.hs  DWhere.hs  DWhy.hs  EPCISTime.hs  Event.hs  JSON.hs  Location.hs  Object.hs  Parser.hs  Utils.hs
test/test-xml/: AggregationEvent.xml  Empty_DWhy.xml  ObjectEvent.xml  ObjectEvent2.xml  ObjectEventNoEventTime.xml  ObjectEvent_11_TrainArrives.xml  QuantityEvent.xml  TransactionEvent.xml  TransformationEvent.xml
test/test-xml/APMEN/: step1.xml  step2.xml  step3.xml  step4.xml
test/test-xml/EPCIS xml files/: DA Query GL1071703.xml  DA Query GL1071704.xml  Loading 323996.xml  Loading 324061.xml  Loading 324062.xml  Loading 324063.xml  Loading 324123.xml  Loading 324225.xml  Loading 324226.xml  Loading 324334.xml  Loading 324335.xml  Loading 324336.xml  Loading 324495.xml  Loading 324651.xml  Loading 324701.xml  Loading 324748.xml  Picking GL1070214.xml  Picking GL1070215.xml  Picking GL1070296.xml  Picking GL1070419.xml  Picking GL1070641.xml  Picking GL1070649.xml  Picking GL1070650.xml  Picking GL1070720.xml  Picking GL1070721.xml  Picking GL1070742.xml
