name:                GS1Combinators
version:             0.1.0.0
synopsis:            Haskell combinator library of GS1 EPCIS standard 
description:         Please see README.md
homepage:            https://github.csiro.au/Blockchain/GS1Combinators#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Mason
maintainer:          Alex.Mason@data61.csiro.au
copyright:           Copyright (c) 2016 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GS1
                     , Data.GS1.DWhat
                     , Data.GS1.DWhy
                     , Data.GS1.DWhen
                     , Data.GS1.DWhere
                     , Data.GS1.EPC
                     , Data.GS1.ErrorDeclaration
                     , Data.GS1.Event
                     , Data.GS1.EventID
                     , Data.GS1.Utils
                     , Data.GS1.Parser.Parser
                     , Data.GS1.URI
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , mtl
                     , time
                     , lens
                     , aeson
                     , utf8-string
                     , uuid
                     , hweblib
                     , attoparsec
                     , xml-conduit
                     , split
                     , text
                     , either
                     , containers
                     , xml-types
                     , swagger2
                     , servant-swagger
                     , sqlite-simple
                     , http-api-data
                     , tuple
                     , validation
  default-language:    Haskell2010

executable GS1Combinators-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , GS1Combinators
                     , swagger2
                     , servant-swagger
  default-language:    Haskell2010

test-suite GS1Combinators-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src test
  main-is:             Spec.hs
  other-modules:       Data.GS1.DWhat
                     , Data.GS1.DWhy
                     , Data.GS1.DWhen
                     , Data.GS1.DWhere
                     , Data.GS1.EPC
                     , Data.GS1.ErrorDeclaration
                     , Data.GS1.Event
                     , Data.GS1.EventID
                     , Data.GS1.Utils
                     , Data.GS1.Parser.Parser
                     , Tests.DWhat
                     , Tests.DWhen
                     , Tests.DWhere
                     , Tests.DWhy
                     , Tests.Utils
                     , Tests.Parser
                     , Data.GS1.URI
  build-depends:       base
                     , bytestring
                     , GS1Combinators
                     , hspec
                     , time
                     , aeson
                     , lens
                     , xml-conduit
                     , mtl
                     , uuid
                     , utf8-string
                     , uuid
                     , hweblib
                     , attoparsec
                     , split
                     , text
                     , either
                     , xml-types
                     , swagger2
                     , servant-swagger
                     , sqlite-simple
                     , http-api-data
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.csiro.au/Blockchain/GS1Combinators
