name:                GS1Combinators
version:             0.1.0.0
synopsis:            Haskell combinator library of GS1 EPCIS standard 
description:         Please see README.md
homepage:            https://github.com/data61/GS1Combinators#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Paul Samways
maintainer:          Paul.Samways@data61.csiro.au
copyright:           Copyright (c) 2016, 2017, 2018, 2019 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-extensions: OverloadedStrings
                    , FlexibleContexts
  exposed-modules:     RunApp.Main
                    -- exposed for tests
                     , Data.GS1.Utils
                     , Data.GS1.Parser.Parser
                     , Data.GS1.DWhat
                     , Data.GS1.DWhy
                     , Data.GS1.DWhen
                     , Data.GS1.DWhere
                     , Data.GS1.EPC
                     , Data.GS1.Event
                     , Data.GS1.EventId
                     , Data.GS1.EventType
  hs-source-dirs:      src
  other-modules:       Data.GS1
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , time >= 1.4.1
                     , lens
                     , uuid
                     , hashable
                     , xml-conduit
                     , text
                     , xml-types
                     , swagger2
                     , directory
                     , http-api-data
                     , filepath
  default-language:    Haskell2010

executable Parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , GS1Combinators
  default-language:    Haskell2010

test-suite GS1Combinators-test
  default-extensions: OverloadedStrings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tests.DWhat
                     , Tests.DWhen
                     , Tests.DWhere
                     , Tests.DWhy
                     , Tests.JSON
                     , Tests.Utils
                     , Tests.Parser
  build-depends:       base
                     , aeson
                     , GS1Combinators
                     , hspec
                     , time
                     , xml-conduit
                     , uuid
                     , text
                     , either
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/data61/GS1Combinators
